Fix heading centering with position/transform technique that works under overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,8 +222,11 @@ section { padding: 70px 0; scroll-margin-top: 100px; }
   .section-head h2.nowrap-heading {
     white-space: nowrap;
     width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
